# dump-analyzer-mcp-server

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_zh.md  install.ps1  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  ci.yml  publish-mcp-registry.yml  publish-mcp.yml
docs/: TODO.md  development.md  devlog.md  technical-design.md
scripts/: check-version-consistency.ps1  e2e-deploy-start-run.ps1  validate-server-schema.py
src/dump_analyzer_mcp_server/: __init__.py  __main__.py  cdb_session.py  logging_utils.py  server.py  upload_sessions.py
src/mcp_windbg/: cdb_session.py  server.py  upload_sessions.py
src/mcp_windbg/tests/: conftest.py  test_cdb.py  test_remote_debugging.py  test_support.py  test_upload_http.py  test_upload_session_infra.py  test_upload_session_integration.py
tests/: conftest.py  test_cdb.py  test_e2e_client_stream.py  test_logging.py  test_support.py  test_upload_http.py  test_upload_session_infra.py  test_upload_session_integration.py
tests/dumps/: README.md  electron.dmp
tests/e2e/: __init__.py  client.py  config.py  conftest.py  test_e2e_core_flow.py  test_e2e_symbol_heavy.py
